--- a/LibriVox/StoryBoard/HomePage.storyboard
+++ b/LibriVox/StoryBoard/HomePage.storyboard
@@ -675,56 +675,110 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jXa-Ph-AKp">
-                                <rect key="frame" x="62.666666666666657" y="318.66666666666669" width="249.99999999999997" height="175"/>
-                                <subviews>
-                                    <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="8Wa-oE-hcm">
-                                        <rect key="frame" x="115" y="77.333333333333314" width="20" height="20"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="20" id="YDH-5j-MDs"/>
-                                            <constraint firstAttribute="height" constant="20" id="h9x-VA-qRQ"/>
-                                        </constraints>
-                                    </activityIndicatorView>
-                                    <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="zbL-aN-eCq">
-                                        <rect key="frame" x="50" y="113.33333333333331" width="150" height="4"/>
-                                    </progressView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RRE-eh-HlO">
-                                        <rect key="frame" x="32" y="16" width="186" height="53"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="53" id="apF-kz-8Ht"/>
-                                        </constraints>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" systemColor="systemGray5Color"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Download" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="R8h-ex-T3z">
+                                <rect key="frame" x="130" y="66" width="115.33333333333331" height="33"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="175" id="GcM-3A-FBw"/>
-                                    <constraint firstAttribute="width" constant="250" id="O37-gx-b3y"/>
-                                    <constraint firstItem="8Wa-oE-hcm" firstAttribute="centerY" secondItem="jXa-Ph-AKp" secondAttribute="centerY" id="STW-xe-qZg"/>
-                                    <constraint firstItem="RRE-eh-HlO" firstAttribute="leading" secondItem="jXa-Ph-AKp" secondAttribute="leading" constant="32" id="Tvh-RL-05V"/>
-                                    <constraint firstAttribute="trailing" secondItem="zbL-aN-eCq" secondAttribute="trailing" constant="50" id="cSL-Bv-fyB"/>
-                                    <constraint firstItem="RRE-eh-HlO" firstAttribute="top" secondItem="jXa-Ph-AKp" secondAttribute="top" constant="16" id="fED-Eu-24C"/>
-                                    <constraint firstItem="8Wa-oE-hcm" firstAttribute="centerX" secondItem="jXa-Ph-AKp" secondAttribute="centerX" id="ptq-fY-C7m"/>
-                                    <constraint firstAttribute="trailing" secondItem="RRE-eh-HlO" secondAttribute="trailing" constant="32" id="uEm-DL-f12"/>
-                                    <constraint firstItem="zbL-aN-eCq" firstAttribute="leading" secondItem="jXa-Ph-AKp" secondAttribute="leading" constant="50" id="vQO-GQ-6jI"/>
-                                    <constraint firstItem="zbL-aN-eCq" firstAttribute="top" secondItem="8Wa-oE-hcm" secondAttribute="bottom" constant="16" id="wtf-Kw-Jei"/>
+                                    <constraint firstAttribute="height" constant="33" id="bEf-af-xcz"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JDX-p6-FKw">
+                                <rect key="frame" x="16" y="131" width="343" height="291"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="download" translatesAutoresizingMaskIntoConstraints="NO" id="CBD-ZS-23u">
+                                        <rect key="frame" x="62" y="25" width="219" height="234"/>
+                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="219" id="Blc-eD-V1R"/>
+                                            <constraint firstAttribute="height" constant="234" id="ygx-yV-tfm"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="CBD-ZS-23u" secondAttribute="bottom" constant="32" id="1dT-G9-dcG"/>
+                                    <constraint firstAttribute="height" constant="291" id="CCC-i4-QhL"/>
+                                    <constraint firstItem="CBD-ZS-23u" firstAttribute="centerX" secondItem="JDX-p6-FKw" secondAttribute="centerX" id="cbV-fC-xkB"/>
                                 </constraints>
                             </view>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="9We-QG-lOr">
+                                <rect key="frame" x="32" y="493" width="311" height="5"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="5" id="Ys6-ix-eaI"/>
+                                </constraints>
+                            </progressView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="374 Kb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nf7-Mc-R5F">
+                                <rect key="frame" x="32" y="467.66666666666669" width="58" height="24.666666666666686"/>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="374 Kb" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7oH-Rl-wee">
+                                <rect key="frame" x="285" y="467.66666666666669" width="58" height="24.666666666666686"/>
+                                <fontDescription key="fontDescription" name="Nunito-Light" family="Nunito" pointSize="18"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="downloading...." textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gkx-Nx-1bH">
+                                <rect key="frame" x="106.00000000000001" y="509" width="163.33333333333337" height="33"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="33" id="7DU-y5-QV6"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="24"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fny-Tl-PVb">
+                                <rect key="frame" x="100" y="645" width="175" height="34"/>
+                                <color key="backgroundColor" name="Green Tone"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="175" id="FST-ua-MuI"/>
+                                    <constraint firstAttribute="height" constant="34" id="YWQ-1H-xJU"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="16"/>
+                                <color key="tintColor" name="Green Tone"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Cancel">
+                                    <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                        <integer key="value" value="8"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <action selector="buttonCancel:" destination="GNs-df-U94" eventType="touchUpInside" id="uCh-Bs-2WP"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="c9h-ZJ-lhI"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="jXa-Ph-AKp" firstAttribute="centerY" secondItem="8Ar-Kt-6dA" secondAttribute="centerY" id="H78-qY-re0"/>
-                            <constraint firstItem="jXa-Ph-AKp" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="aX6-cG-70e"/>
+                            <constraint firstItem="R8h-ex-T3z" firstAttribute="top" secondItem="c9h-ZJ-lhI" secondAttribute="top" constant="16" id="Bnh-xV-QUv"/>
+                            <constraint firstItem="7oH-Rl-wee" firstAttribute="top" secondItem="nf7-Mc-R5F" secondAttribute="top" id="CU8-ds-wx4"/>
+                            <constraint firstItem="nf7-Mc-R5F" firstAttribute="centerY" secondItem="8Ar-Kt-6dA" secondAttribute="centerY" constant="74" id="Dgy-ja-3AZ"/>
+                            <constraint firstItem="fny-Tl-PVb" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="Epl-e5-qCC"/>
+                            <constraint firstItem="JDX-p6-FKw" firstAttribute="top" secondItem="R8h-ex-T3z" secondAttribute="bottom" constant="32" id="HLx-DN-iZu"/>
+                            <constraint firstItem="R8h-ex-T3z" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="N90-iL-OhN"/>
+                            <constraint firstItem="7oH-Rl-wee" firstAttribute="bottom" secondItem="nf7-Mc-R5F" secondAttribute="bottom" id="UHw-nT-wsv"/>
+                            <constraint firstItem="9We-QG-lOr" firstAttribute="top" secondItem="nf7-Mc-R5F" secondAttribute="bottom" constant="0.67000000000000004" id="WUO-vR-hu0"/>
+                            <constraint firstItem="Gkx-Nx-1bH" firstAttribute="centerX" secondItem="8Ar-Kt-6dA" secondAttribute="centerX" id="XY0-Rm-jIC"/>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="bottom" secondItem="fny-Tl-PVb" secondAttribute="bottom" constant="99" id="ae0-nz-dOQ"/>
+                            <constraint firstItem="JDX-p6-FKw" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="16" id="azh-b7-0FC"/>
+                            <constraint firstItem="Gkx-Nx-1bH" firstAttribute="top" secondItem="9We-QG-lOr" secondAttribute="top" constant="16" id="cH3-YG-XYG"/>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="7oH-Rl-wee" secondAttribute="trailing" constant="32" id="hW9-6m-zVG"/>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="JDX-p6-FKw" secondAttribute="trailing" constant="16" id="lBa-Op-9Mn"/>
+                            <constraint firstItem="c9h-ZJ-lhI" firstAttribute="trailing" secondItem="9We-QG-lOr" secondAttribute="trailing" constant="32" id="mi8-4T-3Te"/>
+                            <constraint firstItem="nf7-Mc-R5F" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="32" id="tEp-W7-SzW"/>
+                            <constraint firstItem="9We-QG-lOr" firstAttribute="leading" secondItem="c9h-ZJ-lhI" secondAttribute="leading" constant="32" id="tS7-lh-bkO"/>
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="activityIndicator" destination="8Wa-oE-hcm" id="avP-rB-C86"/>
-                        <outlet property="backgroundView" destination="jXa-Ph-AKp" id="vY4-k2-SbZ"/>
-                        <outlet property="labelTitle" destination="RRE-eh-HlO" id="jeg-NK-C9Q"/>
-                        <outlet property="progressBar" destination="zbL-aN-eCq" id="uXY-Sb-Ljk"/>
+                        <outlet property="currentBytes" destination="nf7-Mc-R5F" id="JaM-Ff-XDe"/>
+                        <outlet property="expectedBytes" destination="7oH-Rl-wee" id="60h-qa-RSP"/>
+                        <outlet property="progressBar" destination="9We-QG-lOr" id="KCS-FE-U2O"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CrT-oc-wRk" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -870,11 +924,12 @@
         </designable>
     </designables>
     <inferredMetricsTieBreakers>
-        <segue reference="Sw7-E8-QYW"/>
+        <segue reference="g3y-Fd-V1A"/>
     </inferredMetricsTieBreakers>
     <resources>
         <image name="28187" width="305" height="475"/>
         <image name="backward.end.alt.fill" catalog="system" width="128" height="64"/>
+        <image name="download" width="476" height="512"/>
         <image name="ellipsis.circle" catalog="system" width="128" height="123"/>
         <image name="forward.end.alt.fill" catalog="system" width="128" height="64"/>
         <image name="house" catalog="system" width="128" height="104"/>
@@ -886,6 +941,9 @@
         <image name="star" width="512" height="512"/>
         <image name="star" catalog="system" width="128" height="116"/>
         <image name="starOn" width="512" height="512"/>
+        <namedColor name="Green Tone">
+            <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="Gren Tone">
             <color red="0.6119999885559082" green="0.85500001907348633" blue="0.52499997615814209" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
@@ -900,9 +958,6 @@
         </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray5Color">
-            <color red="0.89803921568627454" green="0.89803921568627454" blue="0.91764705882352937" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
