--- a/LibriVox/StoryBoard/Discover.storyboard
+++ b/LibriVox/StoryBoard/Discover.storyboard
@@ -251,11 +251,23 @@
                                     <segue destination="hqL-SB-PuW" kind="show" identifier="showAuthors" id="Zse-9C-rXR"/>
                                 </connections>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTw-kK-xwX">
+                                <rect key="frame" x="195" y="440.33333333333331" width="75" height="35"/>
+                                <color key="backgroundColor" red="1" green="0.57810515169999999" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="Iqs-hM-3vm" kind="show" id="jve-og-a39"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="eAg-nt-0nu"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="eAg-nt-0nu" firstAttribute="trailing" secondItem="UTw-kK-xwX" secondAttribute="trailing" constant="123" id="2Rg-7y-hg4"/>
+                            <constraint firstItem="UTw-kK-xwX" firstAttribute="top" secondItem="Rhl-K1-m7p" secondAttribute="bottom" constant="20" id="5lC-Y4-wBu"/>
                             <constraint firstItem="R82-5C-Qi0" firstAttribute="top" secondItem="9Rc-Z1-AxE" secondAttribute="bottom" constant="20" id="6ie-89-2wz"/>
+                            <constraint firstItem="UTw-kK-xwX" firstAttribute="leading" secondItem="eAg-nt-0nu" secondAttribute="leading" constant="195" id="7QV-jY-P30"/>
                             <constraint firstItem="Whm-6G-IpD" firstAttribute="top" secondItem="eAg-nt-0nu" secondAttribute="top" id="Aqn-My-rX4"/>
                             <constraint firstItem="SG6-Lb-ZBp" firstAttribute="centerY" secondItem="Whm-6G-IpD" secondAttribute="centerY" id="CmI-pz-sHT"/>
                             <constraint firstItem="Rhl-K1-m7p" firstAttribute="leading" secondItem="eAg-nt-0nu" secondAttribute="leading" constant="16" id="FkA-67-Gvl"/>
@@ -347,7 +359,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Categories" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Fi4-Mz-hHa">
-                                <rect key="frame" x="16" y="0.0" width="361" height="31.666666666666671"/>
+                                <rect key="frame" x="16" y="0.0" width="361" height="31.666666666666668"/>
                                 <fontDescription key="fontDescription" name="Nunito-Bold" family="Nunito" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -1258,14 +1270,140 @@
             </objects>
             <point key="canvasLocation" x="7663" y="739"/>
         </scene>
+        <!--Title Of BOOK-->
+        <scene sceneID="w2e-dM-zVo">
+            <objects>
+                <viewController storyboardIdentifier="PlayerVC" id="Iqs-hM-3vm" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Ll4-lg-E56">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CCJ-7h-b4A">
+                                <rect key="frame" x="16" y="16" width="361" height="519"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="519" id="wUV-1C-tEu"/>
+                                </constraints>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <color key="textColor" systemColor="labelColor"/>
+                                <fontDescription key="fontDescription" name="Nunito-Regular" family="Nunito" pointSize="16"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TI1-Y7-O0c">
+                                <rect key="frame" x="102.33333333333333" y="792" width="39.333333333333329" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="FND-DG-XB9"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="backward.end.alt.fill" catalog="system"/>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KwL-2Q-S4X" customClass="ToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                <rect key="frame" x="171.66666666666666" y="782" width="50" height="50"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8N9-IZ-6T1"/>
+                                    <constraint firstAttribute="width" constant="50" id="9Ig-b8-kiu"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="pause">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgNotSelected" value="play"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgSelected" value="pause"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.69999998807907104" translatesAutoresizingMaskIntoConstraints="NO" id="HoG-32-ytU">
+                                <rect key="frame" x="16" y="762" width="361" height="10"/>
+                                <color key="tintColor" name="Green Tone"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="10" id="jUq-iv-urD"/>
+                                </constraints>
+                            </progressView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fzc-3e-ILr" customClass="ToggleBtn" customModule="LibriVox" customModuleProvider="target">
+                                <rect key="frame" x="347" y="792" width="30" height="30"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="BT7-KY-VhW"/>
+                                    <constraint firstAttribute="height" constant="30" id="fNH-wQ-bt5"/>
+                                </constraints>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" image="star">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <preferredSymbolConfiguration key="preferredSymbolConfiguration"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgNotSelected" value="star"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgSelected" value="starOn"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="o0n-HG-Wpd">
+                                <rect key="frame" x="16" y="795" width="30" height="24.666666666666629"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="30" id="3cn-pm-j9z"/>
+                                    <constraint firstAttribute="height" constant="30" id="h1j-IA-Cgt"/>
+                                </constraints>
+                                <color key="tintColor" systemColor="labelColor"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" title="Button" backgroundImage="list.triangle" catalog="system">
+                                    <color key="titleColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgNotSelected" value="star"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="imgSelected" value="starOn"/>
+                                </userDefinedRuntimeAttributes>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FZl-Rz-osA">
+                                <rect key="frame" x="251.66666666666666" y="792" width="39.333333333333343" height="30"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="QOl-Ua-Hwm"/>
+                                </constraints>
+                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="forward.end.alt.fill" catalog="system"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="d4z-oB-ajB"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="FZl-Rz-osA" firstAttribute="centerY" secondItem="KwL-2Q-S4X" secondAttribute="centerY" id="4ub-Bh-O51"/>
+                            <constraint firstItem="KwL-2Q-S4X" firstAttribute="centerX" secondItem="d4z-oB-ajB" secondAttribute="centerX" id="BKG-3i-JEW"/>
+                            <constraint firstItem="TI1-Y7-O0c" firstAttribute="centerY" secondItem="KwL-2Q-S4X" secondAttribute="centerY" id="G1c-s0-Bgt"/>
+                            <constraint firstItem="o0n-HG-Wpd" firstAttribute="leading" secondItem="d4z-oB-ajB" secondAttribute="leading" constant="16" id="Jx3-ju-EeG"/>
+                            <constraint firstItem="Fzc-3e-ILr" firstAttribute="centerY" secondItem="KwL-2Q-S4X" secondAttribute="centerY" id="VOI-II-6GH"/>
+                            <constraint firstItem="d4z-oB-ajB" firstAttribute="trailing" secondItem="HoG-32-ytU" secondAttribute="trailing" constant="16" id="ZSE-jr-O6O"/>
+                            <constraint firstItem="FZl-Rz-osA" firstAttribute="leading" secondItem="KwL-2Q-S4X" secondAttribute="trailing" constant="30" id="aCF-aj-MTV"/>
+                            <constraint firstItem="d4z-oB-ajB" firstAttribute="bottom" secondItem="KwL-2Q-S4X" secondAttribute="bottom" constant="10" id="fXx-B7-np6"/>
+                            <constraint firstItem="KwL-2Q-S4X" firstAttribute="top" secondItem="HoG-32-ytU" secondAttribute="bottom" constant="10" id="fki-c1-Ma8"/>
+                            <constraint firstItem="o0n-HG-Wpd" firstAttribute="centerY" secondItem="KwL-2Q-S4X" secondAttribute="centerY" id="gXt-Hc-n8g"/>
+                            <constraint firstItem="CCJ-7h-b4A" firstAttribute="top" secondItem="d4z-oB-ajB" secondAttribute="top" constant="16" id="h9U-nN-k6U"/>
+                            <constraint firstItem="KwL-2Q-S4X" firstAttribute="leading" secondItem="TI1-Y7-O0c" secondAttribute="trailing" constant="30" id="jve-aW-rkR"/>
+                            <constraint firstItem="d4z-oB-ajB" firstAttribute="trailing" secondItem="CCJ-7h-b4A" secondAttribute="trailing" constant="16" id="nKG-OF-L3V"/>
+                            <constraint firstItem="d4z-oB-ajB" firstAttribute="trailing" secondItem="Fzc-3e-ILr" secondAttribute="trailing" constant="16" id="u0k-ZV-dXj"/>
+                            <constraint firstItem="HoG-32-ytU" firstAttribute="leading" secondItem="d4z-oB-ajB" secondAttribute="leading" constant="16" id="vo6-3j-Eml"/>
+                            <constraint firstItem="CCJ-7h-b4A" firstAttribute="leading" secondItem="d4z-oB-ajB" secondAttribute="leading" constant="16" id="zzB-Fp-wcx"/>
+                        </constraints>
+                    </view>
+                    <navigationItem key="navigationItem" title="Title Of BOOK" id="toW-yA-5bO"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2dj-26-r77" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2904.5801526717555" y="1477.4647887323945"/>
+        </scene>
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="XWL-uB-w3Z"/>
         <segue reference="QqL-zu-y1L"/>
-        <segue reference="vDx-pZ-vS1"/>
+        <segue reference="UtY-K6-b4Z"/>
     </inferredMetricsTieBreakers>
     <resources>
+        <image name="backward.end.alt.fill" catalog="system" width="128" height="64"/>
         <image name="circle.grid.2x2" catalog="system" width="128" height="111"/>
+        <image name="forward.end.alt.fill" catalog="system" width="128" height="64"/>
+        <image name="list.triangle" catalog="system" width="128" height="91"/>
         <image name="magnifyingglass" catalog="system" width="128" height="117"/>
         <image name="pause" width="512" height="512"/>
         <image name="person" catalog="system" width="128" height="121"/>
